# eternalog

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest-branch
src/eternalog/: entrypoints.py  main.py
src/eternalog/api/: __init__.py
src/eternalog/api/v1/: __init__.py  test_router.py
src/eternalog/data/: config.py  connection.py  core.py  models.py
src/eternalog/domain/: config.py  core.py  schemas.py
src/eternalog/services/: blockchain.py
src/tests/functional/: test_test_router.py
src/tests/integration/data/: test_models.py
src/tests/unit/domain/: test_config.py  test_core.py  test_schemas.py
src/tests/unit/services/: test_blockchain.py
