[project]
name = "eternalog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "cryptography>=44.0.0",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "httpx>=0.28.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eternalog"]
